<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="compose_label">Compose</string>
    <string name="compose_tweet_label">Tweet</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Twitter Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Home</string>
    <string name="user_name_label">User Name</string>
    <string name="tweet_body_label">This is a tweet body.</string>
    <string name="relative_time_label">1h ago</string>
    <string name="user_screen_name_label">\@userscreenname</string>
    <string name="home_label">Home</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="compose_hint">Whats happening?</string>
    <string name="profile_label">Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_third_party">ThirdPartyActivity</string>
    <string name="user_description_label">User description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers_label">n Followers</string>
    <string name="following_label">n Following</string>
    <string name="tweets_count_label">n Tweets</string>

</resources>