<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.apps.basictwitter.activities.ThirdPartyActivity" >

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/ivProfileImage"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:layout_marginRight="10dp"
            android:src="@android:drawable/screen_background_light_transparent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name_label"
            android:id="@+id/tvUserName"
            android:layout_toRightOf="@id/ivProfileImage"
            android:layout_alignParentTop="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_description_label"
            android:id="@+id/tvUserDescription"
            android:layout_below="@+id/tvUserName"
            android:layout_toRightOf="@id/ivProfileImage"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/llCounts"
        android:layout_below="@+id/rlHeader"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tweets_count_label"
            android:id="@+id/tvTweetsCount"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_alignParentTop="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers_label"
            android:id="@+id/tvFollowers"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingRight="20dp"
            android:layout_alignParentTop="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following_label"
            android:id="@+id/tvFollowing"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingRight="10dp"
            android:layout_alignParentTop="true"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbLoading"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <FrameLayout
        android:id="@+id/thirdPartyFragmentHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/llCounts"
        tools:layout="@layout/fragment_tweets_list">
    </FrameLayout>

</RelativeLayout>
